Tue Apr  7 16:53:58 1998  Dan Winship  <danw@mit.edu>

	* secure.c (secure_putbyte): Set nout = 0 *before* calling
 	secure_putbuf: if the transfer is aborted, the SIGURG handler will
 	longjmp out, so the line after the secure_putbuf will never get
 	executed, so nout would never be reset and the next transfer
 	would overrun ucbuf.

Wed Feb 18 15:29:35 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Fri Feb 13 15:31:46 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in (thisconfigdir), configure.in: Point the
 		configuration directory at our parent, and remove our
		local configure.in

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Thu Jan 29 19:39:27 1998  Dan Winship  <danw@mit.edu>

	* ftp.h:
	* ftp.M:
	* main.c (main): add options -f (forward credentials) and -x
	(automatically negotiate encryption)

	* ftp.c (do_auth): implement -f. Also, don't complain that
	ftp/hostname doesn't exist if host/hostname does.

	* cmds.c (setpeer): implement -x

Thu Dec 11 23:26:58 1997  Tom Yu  <tlyu@mit.edu>

	* ftp.c:
	* main.c: Don't include netdb.h or sys/socket.h if krb.h is
	included; this works around an Ultrix bug where those headers
	aren't protected against multiple inclusion.

Thu Oct 16 01:20:30 1997  Tom Yu  <tlyu@mit.edu>

	* main.c: Change KERBEROS to KRB5_KRB4_COMPAT where appropriate.

	* secure.c: Use <secure.h> rather than "secure.h" so that the
	correct secure.h gets included (the one in the $(srcdir) of the
	directory we're compiling secure.c into).  From danw@mit.edu.

	* ftp.c: Change KERBEROS to KRB5_KRB4_COMPAT where appropriate.
	Re-order the clauses so that that GSSAPI gets tried before
	KERBEROS_V4.

	* Makefile.in: Update LOCALINCLUDE and the link line to DTRT with
	krb4 compatibility.

Sun Aug 17 14:23:39 1997  Ezra Peisach  <epeisach@mit.edu>
